--- a/settings.json
+++ b/settings.json
@@ -22,8 +22,7 @@
       "id": 4,
       "label": "Copilot Pro",
       "url": "https://copilot.cloud.microsoft",
-      "available": true,
-      "id": 4
+      "available": true
     }
   ]
 }
